Experimental track disabling

--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "cookies-next": "^2.1.2",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.3",
+    "json-midi-encoder": "^5.1.28",
+    "midi-file-parser": "^1.0.0",
+    "midi-json-parser": "^8.1.31",
+    "midi-json-parser-worker": "^8.1.27",
     "next": "13.4.3",
     "postcss": "8.4.27",
     "react": "18.2.0",
