Remove python requirement, use piano-ts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es3",
+    "ignoreDeprecations": "5.0",
     "lib": [
       "dom",
       "dom.iterable",
