--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "midi-json-parser": "^8.1.31",
     "midi-json-parser-worker": "^8.1.27",
     "next": "13.4.3",
+    "piano-ts": "1.0.1",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
